@@ -142,7 +142,12 @@ public class IOSApplication implements Application {
 		Gdx.net = this.net;
 		this.input.setupPeripherals();
 		this.uiWindow.setRootViewController(this.graphics.viewController);
+		this.graphics.updateSafeInsets();
 		Gdx.app.debug("IOSApplication", "created");
+		listener.create();
+		listener.resize(this.graphics.getWidth(), this.graphics.getHeight());
+		// make sure the OpenGL view has contents before displaying it
+		this.graphics.view.display();
 		return true;
 	}
 
